# eventglue

./: README.md
mcr_data_glue/: CMakeLists.txt  package.xml
mcr_data_glue/common/include/mcr_data_glue/: Event.h  EventGlue.h  Port.h
mcr_data_glue/common/include/mcr_data_glue/message_converter/: MessageConverter.h
mcr_data_glue/common/include/mcr_data_glue/ros/: Event_ROS.h
mcr_data_glue/common/src/: EventGlue.cpp
mcr_data_glue_ros/: CMakeLists.txt  package.xml
mcr_data_glue_ros/ros/include/mcr_data_glue/ros/: Port_ROS.h  RosEventGlue.h
mcr_data_glue_ros/ros/include/mcr_data_glue_ros/: RosEvent.h  RosEventGlue.h  RosPort.h
mcr_data_glue_ros/ros/src/: RosEventGlue.cpp
mcr_robinson/: CMakeLists.txt  package.xml  setup.py
mcr_robinson/common/include/mcr_robinson/: ComponentContainer.h  Event.h  EventGlue.h  Port.h
mcr_robinson/common/include/mcr_robinson/message_converter/: MessageConverter.h
mcr_robinson/common/scripts/mcr_robinson_python/: ComponentContainer.py  DataPort.py
mcr_robinson_hello_world/: CMakeLists.txt  package.xml  setup.py
mcr_robinson_hello_world/common/include/mcr_robinson_hello_world/: HelloWorld.h  HelloWorldImpl.h  IHelloWorld.h
mcr_robinson_hello_world/common/scripts/mcr_robinson_hello_world/: HelloWorldComponent.py
mcr_robinson_hello_world/common/src/: HelloWorld.cpp  HelloWorldImpl.cpp
mcr_robinson_hello_world_ros/: CMakeLists.txt  package.xml
mcr_robinson_hello_world_ros/ros/include/: HelloWorldNode.h
mcr_robinson_hello_world_ros/ros/launch/: hello_world.launch
mcr_robinson_hello_world_ros/ros/scripts/: HelloWorldNode.py
mcr_robinson_hello_world_ros/ros/src/: HelloPythonNode.cpp  HelloWorldNode.cpp
mcr_robinson_java/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
mcr_robinson_java/gradle/wrapper/: gradle-wrapper.properties
mcr_robinson_java/robinson/: build.gradle
mcr_robinson_java/robinson.helloworld/: build.gradle
mcr_robinson_java/robinson.helloworld/src/main/java/helloworld/: HelloWorldImpl.java  IHelloWorld.java  Main.java
mcr_robinson_java/robinson.ros/: build.gradle
mcr_robinson_java/robinson.ros/src/main/java/mcr/robinson/ros/: DataInputPortROS.java  DataOutputPortROS.java  EventInputPortROS.java  EventOutputPortROS.java  JavaPackageFinder.java  PortUtilsROS.java  PortWireingROS.java
mcr_robinson_java/robinson.ros/src/main/java/mcr/robinson/ros/converter/: MessageConverter.java  MessageConverterRegistration.java  StringMessageConverter.java
mcr_robinson_java/robinson/src/main/java/mcr/robinson/: ComponentContainer.java  DataInputSlot.java  DataOutputPort.java  EventInputSlot.java  EventOutputPort.java  IDataSlot.java  IEventSlot.java  PortUtils.java
mcr_robinson_java/robinson/src/main/java/mcr/robinson/adapter/: Data2EventSlot.java
mcr_robinson_java/robinson/src/main/java/mcr/robinson/annotations/: DataInputPort.java  DataOutputPortInfo.java  EventInputPort.java  EventOutputPortInfo.java  Init.java  Shutdown.java  Update.java
mcr_robinson_python/: CMakeLists.txt  package.xml
mcr_robinson_python/common/include/mcr_robinson_python/: PythonComponent.h  Robinson.cxx  Robinson.h  RobinsonPythonInterpreter.h
mcr_robinson_ros/: CMakeLists.txt  package.xml  setup.py
mcr_robinson_ros/ros/include/mcr_robinson_ros/: RosEvent.h  RosEventGlue.h  RosPort.h
mcr_robinson_ros/ros/include/mcr_robinson_ros/message_converter/: ros_msgs.h
mcr_robinson_ros/ros/scripts/mcr_robinson_ros/: Converter.py  DataPort.py
mir_gripper_controller/: CMakeLists.txt  package.xml
mir_gripper_controller/common/include/mir_gripper_controller/: JointPositionController.h  JointPositionCoordinator.h  JointPositionMonitorProxy.h
mir_gripper_controller/common/src/: JointPositionController.cpp  JointPositionCoordinator.cpp
mir_gripper_controller_ros/: CMakeLists.txt  package.xml  setup.py
mir_gripper_controller_ros/ros/include/: JointPositionCommandWrapper.h  JointPositionMonitorProxy.h  YouBotGripperNode.h
mir_gripper_controller_ros/ros/launch/: gripper_controller.launch  gripper_controller_basic.launch
mir_gripper_controller_ros/ros/scripts/: gripper_command_controller  gripper_command_controller_basic
mir_gripper_controller_ros/ros/src/: JointPositionCommandWrapper.cpp  JointPositionMonitorProxy.cpp  YouBotGripperNode.cpp
mir_gripper_controller_ros/ros/src/mir_gripper_controller_ros/: gripper_command_controller.py  gripper_command_controller_basic.py
