<?xml version="1.0"?>
<package>
  <name>mcr_robinson_hello_world</name>
  <version>0.0.0</version>
  <description>controller for using the gripper in moveit</description>

  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mcr_robinson</build_depend>

  <run_depend>mcr_robinson</run_depend>
  
</package>
