<?xml version="1.0"?>
<package>
  <name>mcr_robinson_hello_world_ros</name>
  <version>0.0.0</version>
  <description>controller for using the gripper in moveit</description>

  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>mcr_robinson</build_depend>
  <build_depend>mcr_robinson_hello_world</build_depend>
  <build_depend>mcr_robinson_ros</build_depend>
  
  <build_depend>mcr_robinson_python</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  
  <run_depend>mcr_robinson</run_depend>
  <run_depend>mcr_robinson_ros</run_depend>
  <run_depend>mcr_robinson_hello_world</run_depend>
 
  <run_depend>mcr_robinson_python</run_depend>
  
</package>
