<?xml version="1.0"?>
<package>
  <name>mir_gripper_controller_ros</name>
  <version>0.0.0</version>
  <description>controller for using the gripper in moveit</description>

  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mcr_data_glue</build_depend>
  <build_depend>mir_gripper_controller</build_depend>
  <build_depend>mcr_data_glue_ros</build_depend>
  
  <run_depend>mir_manipulation_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>mcr_data_glue</run_depend>
  <run_depend>mcr_data_glue_ros</run_depend>
  <run_depend>mir_gripper_controller</run_depend>
  
</package>
